--- a/www/bookmarks.html
+++ b/www/bookmarks.html
@@ -802,24 +802,24 @@ Grav Themes, and WordPress Themes</a></p>
 href="https://www.zhihu.com/column/c_1149699860079951872">一起去航海 -
 知乎</a></p>
 
-<details class="details-2" close>
-  <summary tabindex="-1">Finance</a></summary>
+<details close>
+  <summary >Finance</a></summary>
     <content>
       <li><a href="https://www.sse.com.cn/">首页 | 上海证券交易所</a></li>
       <li><a href="https://www.szse.cn/">深圳证券交易所-首页</a></li>
       <li><a href="https://www.shfe.com.cn/">上海期货交易所</a></li>
       <li><a href="https://www.caijing.com.cn/">财经网 - CAIJING.COM.CN</a></li>
       <li><a href="https://finance.sina.com.cn/">新浪财经_新浪网</a></li>
-      <li><a href="https://www.cbbc.org/">英中贸易协会Trade &amp; Investment with China | The China-Britain Business Council | CBBC</a> </li>
+      <li><a href="https://www.cbbc.org/">英中贸易协会Trade &amp; Investment with China | The China-Britain Business Council | CBBC</a></li>
       <li><a href="https://www.dihk.de/de">德国工商总会DIHK - Deutsche Industrie- und Handelskammer</a> </li>
-      <li><a href="https://www.ccifc.org/">中国法国工商会CCI France Chine</a> </li>
-      <li><a href="https://www.sinoss.net/">社科网</a> </li>
-      <li><a href="http://www.nopss.gov.cn/">全国哲学社会科学工作办公室</a> </li>
-      <li><a href="https://cnfol.com/">中金在线首页：财经 _ 股票 _ 证券 _ 金融 _ 财经博客</a> </li>
+      <li><a href="https://www.ccifc.org/">中国法国工商会CCI France Chine</a></li>
+      <li><a href="https://www.sinoss.net/">社科网</a></li>
+      <li><a href="http://www.nopss.gov.cn/">全国哲学社会科学工作办公室</a></li>
+      <li><a href="https://cnfol.com/">中金在线首页：财经 _ 股票 _ 证券 _ 金融 _ 财经博客</a></li>
       <li><a href="http://www.leasinge.net/">上海融资租赁经纪股份有限公司</a> </li>
-      <li><a href="https://www.tuliu.com/">土流网 - 土地流转与转让出租 - 土地交易平台</a> </li>
-      <li><a href="http://www.pbc.gov.cn/">中国人民银行</a> </li>
-      <li><a href="https://www.chinamoney.com.cn/">中国货币网-中国外汇交易中心主办</a> </li>
+      <li><a href="https://www.tuliu.com/">土流网 - 土地流转与转让出租 - 土地交易平台</a></li>
+      <li><a href="http://www.pbc.gov.cn/">中国人民银行</a></li>
+      <li><a href="https://www.chinamoney.com.cn/">中国货币网-中国外汇交易中心主办</a></li>
     </content>
 </details>
 </body>
