--- a/www/00.html
+++ b/www/00.html
@@ -4,8 +4,9 @@
 <body>
 	<article>
 		<header>
-			<h1>Bookmarks</h1>
-		</header>
+			<title>Wesvi'Bookmarks</title>
+		</header>		
+		<h2>Wesvi'Bookmarks</h2>
 		<div>
 			<ul>
 				<details close>
